[test] bridge application