@@ -3,12 +3,13 @@ package bridge.controller;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
-import bridge.domain.BridgeGame;
-import bridge.domain.BridgeMaker;
+import bridge.BridgeGame;
+import bridge.BridgeMaker;
 import bridge.view.InputView;
 import bridge.view.OutputView;
 import java.util.Arrays;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Queue;
 import org.junit.jupiter.api.Test;
 
@@ -59,16 +60,17 @@ class BridgeControllerTest {
     BridgeGame bridgeGame;
     BridgeController bridgeController;
 
-    private void initBridgeController(String output, Queue<Integer> numbers) {
-        inputView = new InputView(() -> output);
+    private void initBridgeController(Queue<String> inputs, Queue<Integer> numbers) {
         outputView = new MockOutPutView();
-        bridgeGame = new BridgeGame(new BridgeMaker(() -> numbers.poll()));
+        inputView = new InputView(inputs::poll);
+        bridgeGame = new BridgeGame(new BridgeMaker(numbers::poll));
         this.bridgeController = new BridgeController(inputView, outputView, bridgeGame);
     }
 
     @Test
     void 게임시작시_시작멘트호출_성공() throws Exception {
-        initBridgeController("4", new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        initBridgeController(new LinkedList<>(List.of("4")),
+            new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
         bridgeController.startGame();
         assertAll(
             () -> assertThat(outputView.printStartPhrase).isOne(),
@@ -78,7 +80,9 @@ class BridgeControllerTest {
 
     @Test
     void 게임_진행_멘트호출_사용자_다리_출력호출_성공() throws Exception {
-        initBridgeController("U", new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        initBridgeController(new LinkedList<>(List.of("4", "U")),
+            new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        bridgeController.startGame();
         bridgeController.onGame();
         assertAll(
             () -> assertThat(outputView.printOnGamePhrase).isOne(),
@@ -88,8 +92,11 @@ class BridgeControllerTest {
 
     @Test
     void 게임_종료_선택멘트호출_성공() throws Exception {
-        initBridgeController("Q", new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
-        boolean quit = bridgeController.isNotFailure();
+        initBridgeController(new LinkedList<>(List.of("4", "D", "Q")),
+            new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        bridgeController.startGame();
+        bridgeController.onGame();
+        boolean quit = bridgeController.isNotEnd();
         assertAll(
             () -> assertThat(outputView.printRetryOrQuitPhrase).isOne(),
             () -> assertThat(quit).isFalse()
@@ -98,8 +105,11 @@ class BridgeControllerTest {
 
     @Test
     void 게임_재시작_선택멘트호출_성공() throws Exception {
-        initBridgeController("R", new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
-        boolean retry = bridgeController.isNotFailure();
+        initBridgeController(new LinkedList<>(List.of("4", "D", "R")),
+            new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        bridgeController.startGame();
+        bridgeController.onGame();
+        boolean retry = bridgeController.isNotEnd();
         assertAll(
             () -> assertThat(outputView.printRetryOrQuitPhrase).isOne(),
             () -> assertThat(retry).isTrue()
@@ -107,8 +117,22 @@ class BridgeControllerTest {
     }
 
     @Test
+    void 맞춘경우_재시작_종료_호출하지않는다() throws Exception {
+        initBridgeController(new LinkedList<>(List.of("4", "U")),
+            new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        bridgeController.startGame();
+        bridgeController.onGame();
+        boolean retry = bridgeController.isNotEnd();
+        assertAll(
+            () -> assertThat(outputView.printRetryOrQuitPhrase).isZero(),
+            () -> assertThat(retry).isTrue()
+        );
+    }
+
+    @Test
     void 게임_종료_결과_호출_성공() throws Exception {
-        initBridgeController("R", new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
+        initBridgeController(new LinkedList<>(List.of("R")),
+            new LinkedList<>(Arrays.asList(1, 0, 0, 1)));
         bridgeController.endGame();
         assertThat(outputView.printResult).isOne();
     }
